Refactor: reformat code, rename something.