@@ -3,9 +3,11 @@ package KOSRAlgorithm;
 import GraphEntity.EdegeNode;
 import GraphEntity.MyGraph;
 import GraphEntity.POI;
-import KOSRAlgorithm._Class.*;
 import KKRSAlgorithm.NavigationUtil;
-//import com.carrotsearch.sizeof.RamUsageEstimator;
+import KOSRAlgorithm._Class.Dominance;
+import KOSRAlgorithm._Class.KOSR_Point;
+import KOSRAlgorithm._Class.headNode;
+import KOSRAlgorithm._Class.subPath;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -18,20 +20,20 @@ public class Find_Topk {
     public static long Time1 = 0;
 
 
-    public static ArrayList<ArrayList<Integer>> KOSR(MyGraph g,int PointNum, int startNum, int k, POI[] POIList, int[] POI_Type){
+    public static ArrayList<ArrayList<Integer>> KOSR(MyGraph g, int PointNum, int startNum, int k, POI[] POIList, int[] POI_Type) {
 
         ArrayList<ArrayList<Integer>> topK = new ArrayList<>();
         ArrayList<ArrayList<KOSR_Point>> KOSR_Point = new ArrayList<>();
         //构建dominance，用于剪枝
         ArrayList<Dominance> dominances = new ArrayList<>();
         //初始化顶点,初始化dominance
-       // startTime1 = System.currentTimeMillis(); //开始获取时间
+        // startTime1 = System.currentTimeMillis(); //开始获取时间
         for (int i = 0; i < PointNum; i++) {
             KOSR_Point.add(new ArrayList<KOSR_Point>());
             dominances.add(new Dominance(i));
         }
-       // endTime1 = System.currentTimeMillis(); //开始获取时间
-       // System.out.println("初始化所用时间为："+(endTime1 - startTime1));
+        // endTime1 = System.currentTimeMillis(); //开始获取时间
+        // System.out.println("初始化所用时间为："+(endTime1 - startTime1));
         int nowPoint = startNum;
         //初始化头节点
         headNode headNode = new headNode();
@@ -46,32 +48,32 @@ public class Find_Topk {
         ArrayList<subPath> NextSubPaths = new ArrayList<>(); //下一步的子路径
         //初始化子路径
         NowSubPaths.add(new subPath());
-        NowSubPaths.get(NowSubPaths.size()-1).subPath.add(startNum);
-        int num1= 0;
+        NowSubPaths.get(NowSubPaths.size() - 1).subPath.add(startNum);
+        int num1 = 0;
 
 
-        while (topK.size() < k){
+        while (topK.size() < k) {
             //FindNN(KOSR_Point, minPathLastPoint, POI_Type[minPath.keyWordNum], k, g, POIList);
 
             for (int i = 0; i < NowSubPaths.size(); i++) {
-                if (NowSubPaths.get(i).flag == true){
-                    nowPoint = NowSubPaths.get(i).subPath.get(NowSubPaths.get(i).subPath.size()-1);
-                    FindNN(KOSR_Point, nowPoint, POI_Type[NowSubPaths.get(i).keyWordNum], (k/1), g, POIList);
+                if (NowSubPaths.get(i).flag) {
+                    nowPoint = NowSubPaths.get(i).subPath.get(NowSubPaths.get(i).subPath.size() - 1);
+                    FindNN(KOSR_Point, nowPoint, POI_Type[NowSubPaths.get(i).keyWordNum], (k), g, POIList);
                     for (int j = 0; j < KOSR_Point.get(nowPoint).size(); j++) {
-                        if (KOSR_Point.get(nowPoint).get(j).kewWordName == POI_Type[NowSubPaths.get(i).keyWordNum]){
+                        if (KOSR_Point.get(nowPoint).get(j).kewWordName == POI_Type[NowSubPaths.get(i).keyWordNum]) {
                             for (int l = 0; l < KOSR_Point.get(nowPoint).get(j).poi.size(); l++) {
                                 NextSubPaths.add(new subPath());
-                                NextSubPaths.get(NextSubPaths.size()-1).subPath.addAll(NowSubPaths.get(i).subPath);
-                                NextSubPaths.get(NextSubPaths.size()-1).subPath.add(KOSR_Point.get(nowPoint).get(j).poi.get(l));
-                                NextSubPaths.get(NextSubPaths.size()-1).subPathWeight = NowSubPaths.get(i).subPathWeight + KOSR_Point.get(nowPoint).get(j).poiWeight.get(l);
-                                NextSubPaths.get(NextSubPaths.size()-1).keyWordNum = NowSubPaths.get(i).keyWordNum+1;
+                                NextSubPaths.get(NextSubPaths.size() - 1).subPath.addAll(NowSubPaths.get(i).subPath);
+                                NextSubPaths.get(NextSubPaths.size() - 1).subPath.add(KOSR_Point.get(nowPoint).get(j).poi.get(l));
+                                NextSubPaths.get(NextSubPaths.size() - 1).subPathWeight = NowSubPaths.get(i).subPathWeight + KOSR_Point.get(nowPoint).get(j).poiWeight.get(l);
+                                NextSubPaths.get(NextSubPaths.size() - 1).keyWordNum = NowSubPaths.get(i).keyWordNum + 1;
                             }
                         }
                     }
                 }
 
             }
-            Dominances(dominances,NextSubPaths);
+            Dominances(dominances, NextSubPaths);
             ArrayList<Integer> needPrunePath = new ArrayList<>();
             //进行剪枝
             subPath nowPath1;
@@ -84,9 +86,9 @@ public class Find_Topk {
 //            }
             for (int i = 0; i < NextSubPaths.size(); i++) {
                 nowPath1 = NextSubPaths.get(i);
-                for (int j = 0; j < dominances.get(nowPath1.subPath.get(nowPath1.subPath.size()-1)).keyWordNum.size(); j++) {
-                    if (nowPath1.keyWordNum == dominances.get(nowPath1.subPath.get(nowPath1.subPath.size()-1)).keyWordNum.get(j)){
-                        if (nowPath1.subPathWeight > dominances.get(nowPath1.subPath.get(nowPath1.subPath.size()-1)).minPathWegh.get(j)){
+                for (int j = 0; j < dominances.get(nowPath1.subPath.get(nowPath1.subPath.size() - 1)).keyWordNum.size(); j++) {
+                    if (nowPath1.keyWordNum == dominances.get(nowPath1.subPath.get(nowPath1.subPath.size() - 1)).keyWordNum.get(j)) {
+                        if (nowPath1.subPathWeight > dominances.get(nowPath1.subPath.get(nowPath1.subPath.size() - 1)).minPathWegh.get(j)) {
                             needPrunePath.add(i);
                         }
                     }
@@ -119,29 +121,29 @@ public class Find_Topk {
             NowSubPaths.addAll(NextSubPaths);
             NextSubPaths.clear();
 
-            if (NowSubPaths.get(0).keyWordNum == POI_Type.length){
+            if (NowSubPaths.get(0).keyWordNum == POI_Type.length) {
                 int minWeight;
                 int Num = 0;
                 for (int i = 0; i < k; i++) {
                     minWeight = MAX_VALUE;
                     for (int j = 0; j < NowSubPaths.size(); j++) {
-                        if (NowSubPaths.get(j).subPathWeight < minWeight){
+                        if (NowSubPaths.get(j).subPathWeight < minWeight) {
                             minWeight = NowSubPaths.get(j).subPathWeight;
                             Num = j;
                         }
                     }
                     topK.add(new ArrayList<Integer>());
-                    topK.get(topK.size()-1).addAll(NowSubPaths.get(Num).subPath);
+                    topK.get(topK.size() - 1).addAll(NowSubPaths.get(Num).subPath);
                     NowSubPaths.remove(Num);
                 }
-                System.out.println("KOSR剪枝的数量为："+num1);
+                System.out.println("KOSR剪枝的数量为：" + num1);
                 break;
             }
 
 
         }
 
-       // System.out.println("Time="+Time1);
+        // System.out.println("Time="+Time1);
 
 
 //        double s = (double) RamUsageEstimator.sizeOf(KOSR_Point)/(1024 * 1024 );
@@ -150,10 +152,8 @@ public class Find_Topk {
     }
 
 
-
-
     public static ArrayList<ArrayList<KOSR_Point>> FindNN(ArrayList<ArrayList<KOSR_Point>> KOSR_Point, int startIndex, int keyWordName, int k2, MyGraph g,
-                                                          POI[] POIList){
+                                                          POI[] POIList) {
         ArrayList<KOSR_Point> kosr_points = KOSR_Point.get(startIndex);
         kosr_points.add(new KOSR_Point(keyWordName));
 
@@ -186,10 +186,10 @@ public class Find_Topk {
 
         // 需进行n-2轮循环
         //long time3 = System.currentTimeMillis();//获取当前系统时间(毫秒)
-       // int k1 = startIndex;
-       // startTime = System.currentTimeMillis(); //开始获取时间
+        // int k1 = startIndex;
+        // startTime = System.currentTimeMillis(); //开始获取时间
         EdegeNode g2;
-        while (kosr_points.get(kosr_points.size()-1).poi.size() < k2){
+        while (kosr_points.get(kosr_points.size() - 1).poi.size() < k2) {
             int k = -1;
             int min = MAX_VALUE;
             // EdegeNode g1 = g.point[k1].firstArc;
@@ -205,9 +205,9 @@ public class Find_Topk {
                 break;
             }
             set[k] = 1; // 把节点k并入
-            dist1.remove(new Integer(k));
+            dist1.remove(Integer.valueOf(k));
             //dist1.remove(k);
-            g2 = (EdegeNode) g.point[k].firstArc;
+            g2 = (EdegeNode) MyGraph.point[k].firstArc;
             // 修改dist[]、path[]
             while (g2 != null) {
                 int j = g2.adjvex;
@@ -219,37 +219,37 @@ public class Find_Topk {
                 }
                 g2 = g2.nextEdge;
             }
-            if(POIList[k].POI_Type == keyWordName){
-                kosr_points.get(kosr_points.size()-1).poi.add(k);
-                kosr_points.get(kosr_points.size()-1).poiWeight.add(dist[k]);
+            if (POIList[k].POI_Type == keyWordName) {
+                kosr_points.get(kosr_points.size() - 1).poi.add(k);
+                kosr_points.get(kosr_points.size() - 1).poiWeight.add(dist[k]);
             }
-           // k1 = k;
+            // k1 = k;
         }
-       // endTime = System.currentTimeMillis(); //开始获取时间
-       // Time1 += endTime - startTime;
+        // endTime = System.currentTimeMillis(); //开始获取时间
+        // Time1 += endTime - startTime;
         return KOSR_Point;
     }
 
 
-    public static ArrayList<Dominance> Dominances(ArrayList<Dominance> dominances,ArrayList<subPath> subPaths){
+    public static ArrayList<Dominance> Dominances(ArrayList<Dominance> dominances, ArrayList<subPath> subPaths) {
         subPath nowPath;
         int nowPoint;
-        boolean flag1 ;
-        boolean flag2 ;
+        boolean flag1;
+        boolean flag2;
         for (int i = 0; i < subPaths.size(); i++) {
             nowPath = subPaths.get(i);
-            nowPoint = nowPath.subPath.get(nowPath.subPath.size()-1);
+            nowPoint = nowPath.subPath.get(nowPath.subPath.size() - 1);
             flag1 = false;
             for (int j = 0; j < dominances.get(nowPoint).keyWordNum.size(); j++) {
-                if (dominances.get(nowPoint).keyWordNum.get(j) == nowPath.keyWordNum ){
+                if (dominances.get(nowPoint).keyWordNum.get(j) == nowPath.keyWordNum) {
                     flag1 = true;
-                    if (dominances.get(nowPoint).minPathWegh.get(j) > nowPath.subPathWeight){
-                        dominances.get(nowPoint).minPathWegh.set(j,nowPath.subPathWeight);
+                    if (dominances.get(nowPoint).minPathWegh.get(j) > nowPath.subPathWeight) {
+                        dominances.get(nowPoint).minPathWegh.set(j, nowPath.subPathWeight);
                         break;
                     }
                 }
             }
-            if (flag1 == false){
+            if (!flag1) {
                 dominances.get(nowPoint).keyWordNum.add(nowPath.keyWordNum);
                 dominances.get(nowPoint).minPathWegh.add(nowPath.subPathWeight);
             }
@@ -287,7 +287,6 @@ public class Find_Topk {
         return dominances;
 
     }
-
 
 
 }
